Projet compilateur/src/compilateur/Yaka.jj
/*	Auteur: Pedrono Marie-Jo
 *  création : 13 février 2002
 *  nature : projet etudiant
 */

 /*
  *      PROJET COMPILATEUR G2
  * COZ - CREMILLEUX - HOLY - TROUCHE
  */

options{
	JDK_VERSION="1.5";	
}

PARSER_BEGIN(Yaka)

package compilateur;

public class Yaka {
	public static TabIdent tabIdent;
	public static Declaration declaration;
	public static Expression expression;
	public static Erreur erreur;
	public static YVM yVM;
	

	public static void main(String args[]) { 
		Yaka analyseur;
		java.io.InputStream input;
	
		if (args.length==1) {
		  System.out.print(args[args.length-1] + ": ");
		  try {
			input = new java.io.FileInputStream(args[args.length-1]+".yaka");
		  } catch (java.io.FileNotFoundException e) {
			System.out.println("Fichier introuvable.");
			return;
		  }
		} else if (args.length==0) {
		  System.out.println("Lecture sur l'entree standard...");
		  input = System.in;
		} else {
		  System.out.println("Usage: java Gram [fichier]");
		  return;
		}
		try {
		  analyseur = new Yaka(input);
		  analyseur.analyse();
		  System.out.println("analyse syntaxique reussie!");
		} catch (ParseException e) {
		  String msg = e.getMessage();
		  msg = msg.substring(0,msg.indexOf("\n"));
		  System.out.println("Erreur de syntaxe : "+msg);
		}
    } 
}

PARSER_END(Yaka)
/***************************************/
/********** TOKEN DEFINITIONS **********/
/***************************************/

TOKEN_MGR_DECLS :
{public static String identLu,chaineLue;
 public static int entierLu;}

/*** Skip whitespace and comments ***/
SKIP :
{
  " "
| "\t"
| "\n"
| "\r"
| "(*"   : IN_COMMENT
}
<IN_COMMENT> MORE:
{
  < ~[] >
}
<IN_COMMENT> SKIP:
{
   < "*)" >  {SwitchTo(DEFAULT);} 
}


/* Mots réservés*/

TOKEN :
{
  < BOOLEEN: "BOOLEEN" >
| < VAR: "VAR" >
| < FAIRE: "FAIRE" >
| < SINON: "SINON" >
| < POUR: "POUR" >
| < SI: "SI" >
| < FSI: "FSI">
| < ENTIER: "ENTIER" >
| < RETOURNE: "RETOURNE" >
| < VRAI: "VRAI" >
| < TANTQUE: "TANTQUE" >
| <CONST : "CONST">
| <FAUX : "FAUX">
| <FAIT : "FAIT">
| <OU : "OU">
| <ET : "ET">
| <NON : "NON">
| <FONCTION : "FONCTION">
| <FFONCTION  : "FFONCTION">
| <PROGRAMME : "PROGRAMME" >
| <FPROGRAMME: "FPROGRAMME" >
| <PRINCIPAL : "PRINCIPAL">
| <FPRINCIPAL : "FPRINCIPAL">
| <ALORS : "ALORS">
| <ECRIRE : "ECRIRE">
| <LIRE : "LIRE">
| <ALALIGNE : "ALALIGNE">

}



/*** unites de base nombres, idents,  strings ***/
TOKEN  :
{
  < #chiffre : ["0"-"9"] >
| < entier : (<chiffre>)+ > 
	{ entierLu = Integer.parseInt(image.toString());
        }
| < #lettre: ["A"-"Z","a"-"z"] >
| < ident : <lettre> (<lettre> | <chiffre>)* >
	{identLu =image.toString();	
	}
| < chaine : "\"" (~["\""])* "\"" | "'" (~["'"])* "'" >
	{ chaineLue = image.toString();
	 }
}


/**************************************/
/********debut de la grammaire ********/
/**************************************/
void analyse() : {}
{
   <PROGRAMME> <ident>	
   bloc()
   <FPROGRAMME> 
}

void bloc() : {}{
 (declConst())*
 (declVar())*		
   suiteExpr() 
}

void declConst() : {}
{
  <CONST>  defConst() ( "," defConst())* ";"
}

void defConst() : {}
{
	
  <ident>  	  	
   "=" valConst() {declaration.setNomIdent(YakaTokenManager.identLu); }
    
}

void valConst() : {}{
  <entier> 	{declaration.affectationConst(YakaTokenManager.entierLu, Constante.T_ENTIER); }	
 | <ident>	{declaration.affectationConstCopie(YakaTokenManager.identLu); }	
 | <VRAI> 	{declaration.affectationConst(YakaTokenManager.entierLu, Constante.T_BOOLEEN); }	
 | <FAUX> 	{declaration.affectationConst(YakaTokenManager.entierLu, Constante.T_BOOLEEN); }	
}


void declVar() : {}
{
  <VAR> type()	
  <ident>  {declaration.affectationVal(YakaTokenManager.identLu);  }		
  ("," 
      <ident>  {declaration.affectationVal(YakaTokenManager.identLu);  }	
  )* ";"
	
}

void type() :{}
{
   <ENTIER> 	{declaration.setTypeVar(Constante.T_ENTIER); }		
 | <BOOLEEN>	{declaration.setTypeVar(Constante.T_BOOLEEN); }	
}
/*
 * Syntaxe des instructions.
 */
void suiteExpr() : {}
{ 	(expression() (";" {expression.affiche();}
	(expression())? )*)? }



/*
 * Expression .
 */
void expression() : {}
{
  simpleExpr() 
  (opRel() 
  simpleExpr() 
  )?
}



void simpleExpr() : {}
{
   terme() 
   (opAdd() 
   terme()	
   )*
} 
void terme() : {}
{
  facteur() 
  (opMul() 
  facteur()	
  )*
}
void facteur() : {}
{   primaire() 
  |  opNeg() primaire() 
}

void primaire (): {}
{
   valeur()
 | "(" expression() ")" 
 
}

void valeur () : {}
{ <entier> {expression.ajouteType(Constante.T_ENTIER);expression.ajouteVal(YakaTokenManager.entierLu);}	
 | <ident> {expression.ajouteType(YakaTokenManager.identLu);}		
 | <VRAI>  {expression.ajouteType(Constante.T_BOOLEEN);expression.ajouteVal(true);}	
 | <FAUX>  {expression.ajouteType(Constante.T_BOOLEEN);expression.ajouteVal(false);}		
 
}

void opRel() : {}
{
   "=" 	{expression.ajouteOp(Constante.OP_EQ);} 		
 | "<>" {expression.ajouteOp(Constante.OP_DIF);}	
 | "<" 	{expression.ajouteOp(Constante.OP_INF);}
 | "<=" {expression.ajouteOp(Constante.OP_INFEQ);}
 | ">" 	{expression.ajouteOp(Constante.OP_SUP);}
 | ">=" {expression.ajouteOp(Constante.OP_SUPEQ);}
} 

void opAdd() : {}
{
    "+"		{expression.ajouteOp(Constante.OP_PLUS);}
  |  "-"  	{expression.ajouteOp(Constante.OP_MOINS);}
  | <OU> 	{expression.ajouteOp(Constante.OP_OU);}
}

void opMul() : {}
{
  "*"		{expression.ajouteOp(Constante.OP_FOIS);}
  | "/"		{expression.ajouteOp(Constante.OP_DIV);}
  | <ET>	{expression.ajouteOp(Constante.OP_ET);}
} 

void opNeg() : {}
{ "-" 		{expression.ajouteOp(Constante.OP_NEG);}	
 | <NON>	{expression.ajouteOp(Constante.OP_NON);}
}
